<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
        android:id="@+id/barTimer"
        style="@style/Widget.MaterialProgressBar.ProgressBar"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:progress="100"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/barTimer"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/start"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="@+id/barTimer"
        app:layout_constraintEnd_toEndOf="@+id/barTimer"
        app:layout_constraintStart_toStartOf="@+id/barTimer"
        app:layout_constraintTop_toTopOf="@+id/barTimer" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/main_btn_size"
        android:layout_marginEnd="109dp"
        android:layout_marginStart="109dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barTimer">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_btn_size"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/barTimer">

            <Button
                android:id="@+id/btn_skip"
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                android:background="@drawable/skip_selector" />

            <FrameLayout
                android:layout_width="@dimen/main_btn_size"
                android:layout_height="@dimen/main_btn_size">

                <Button
                    android:id="@+id/btn_start"
                    android:layout_width="@dimen/main_btn_size"
                    android:layout_height="@dimen/main_btn_size"
                    android:background="@drawable/ic_play"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btn_pause"
                    android:layout_width="@dimen/main_btn_size"
                    android:layout_height="@dimen/main_btn_size"
                    android:background="@drawable/ic_pause"
                    tools:ignore="ButtonStyle" />

            </FrameLayout>

            <Button
                android:id="@+id/btn_stop"
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                android:background="@drawable/stop_selector"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>